--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,13 @@
     
     <dependencies>
         <dependency>
-            <groupId>com.edu.umanizales.listase</groupId>
-            <artifactId>ListaSE</artifactId>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.faces</artifactId>
+            <version>2.3.9</version>
+        </dependency>       
+        <dependency>
+            <groupId>co.edu.umanizales.listase</groupId>
+            <artifactId>TADS</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
@@ -26,7 +31,7 @@
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
-         <dependency>
+        <dependency>
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
             <version>8.0</version>
